-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.12
-
None
-
-
b4589db4c7cb10cb55b38bab00d80eb1290312b1 (qt/qtwebengine/5.12)
Test fails quite often according to grafana:
The problems is with how QTBUG-61506 was solved here:
https://codereview.qt-project.org/c/qt/qtwebengine/+/198525
callback for findText called for id with previous test and that fails test