Reset findText reply id on StopFinding to prevent callback later

Not updating lastReceivedFindReply caused next findText call after
StopFinding to trigger redundant callback call on checking stale query.

Fixes: QTBUG-77029
Change-Id: Iad4b71364ecb3ec3db3096b739e77620d12731f9
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>